tests/PhiCore/compile_failure/src/core/integer/unsigned_unary_minus.fail.cpp
#include <phi/core/integer.hpp>

int main()
{
    phi::integer<unsigned> i{7u};

    auto val = -i;

    return val.get();
}
